2007-10-21  Alp Toker  <alp@atoker.com>
        Reviewed by Mark Rowe.

        Implement spelling and grammar mistake underlining with Pango/Cairo.

        This change does not add any actual support for spelling or grammar
        checking to any port.

        * platform/graphics/cairo/GraphicsContextCairo.cpp:
        (WebCore::GraphicsContext::drawLineForMisspellingOrBadGrammar):


git-svn-id: http://svn.webkit.org/repository/webkit/trunk@26856 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/WebCore/ChangeLog
+++ b/WebCore/ChangeLog
@@ -2,6 +2,18 @@
 
         Reviewed by Mark Rowe.
 
+        Implement spelling and grammar mistake underlining with Pango/Cairo.
+
+        This change does not add any actual support for spelling or grammar
+        checking to any port.
+
+        * platform/graphics/cairo/GraphicsContextCairo.cpp:
+        (WebCore::GraphicsContext::drawLineForMisspellingOrBadGrammar):
+
+2007-10-21  Alp Toker  <alp@atoker.com>
+
+        Reviewed by Mark Rowe.
+
         Cairo canvas fixes:
 
         Fix a refcounting issue leading to leaks and crashes on canvas
