Fix support for Signed-off-by detection in prepare-ChangeLog --git-commit. The Signed-off-by tag does not appear in the header but usually at the end.
git-svn-id: http://svn.webkit.org/repository/webkit/trunk@26866 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/WebKitTools/ChangeLog
+++ b/WebKitTools/ChangeLog
@@ -1,3 +1,13 @@
+2007-10-22  Simon Hausmann  <hausmann@kde.org>
+
+        Reviewed by aroben.
+
+        Fix support for Signed-off-by detection in prepare-ChangeLog
+        --git-commit. The Signed-off-by tag does not appear in the header
+        but usually at the end.
+
+        * Scripts/prepare-ChangeLog:
+
 2007-10-21  Mark Rowe  <mrowe@apple.com>
 
         Reviewed by Eric.
