2007-10-15 Holger Hans Peter Freyther <zecke@selfish.org>
        Shrink the TemporaryLinkStubs and move the
        Frame::setNeedsReapplyStyles stub to FrameQt.cpp

Signed-off-by: Lars Knoll <lars@trolltech.com>


git-svn-id: http://svn.webkit.org/repository/webkit/trunk@26869 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/WebCore/ChangeLog
+++ b/WebCore/ChangeLog
@@ -1,3 +1,14 @@
+2007-10-22  Holger Hans Peter Freyther <zecke@selfish.org>
+
+        Reviewed by Lars Knoll <lars@trolltech.com>.
+
+        Shrink the TemporaryLinkStubs and move the
+        Frame::setNeedsReapplyStyles stub to FrameQt.cpp
+
+        * page/qt/FrameQt.cpp:
+        (WebCore::Frame::setNeedsReapplyStyles):
+        * platform/qt/TemporaryLinkStubs.cpp:
+
 2007-10-22  Holger Freyther  <zecke@selfish.org>
 
         Reviewed by Lars Knoll <lars@trolltech.com>.
