--- a/WebCore/ChangeLog
+++ b/WebCore/ChangeLog
@@ -1,3 +1,12 @@
+2007-10-22 Holger Hans Peter Freyther <zecke@selfish.org>
+
+        Reviewed by Lars Knoll <lars@trolltech.com>.
+
+        Return a non empty string in more functions.
+
+        * platform/qt/Localizations.cpp:
+        (WebCore::contextMenuItemTagShowSpellingPanel):
+
 2007-10-22  Holger Hans Peter Freyther <zecke@selfish.org>
 
         Reviewed by Lars Knoll <lars@trolltech.com>.
