Disable the database feature in the qmake build for now.
git-svn-id: http://svn.webkit.org/repository/webkit/trunk@26878 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/WebCore/ChangeLog
+++ b/WebCore/ChangeLog
@@ -2,6 +2,14 @@
 
         Reviewed by Lars.
 
+        Disable the Database feature for the qmake build for now.
+
+        * WebCore.pro:
+
+2007-10-22  Simon Hausmann  <hausmann@kde.org>
+
+        Reviewed by Lars.
+
         Make disabling the database feature (ENABLE_DATABASE=0) work by
         placing various #ifdefs into the code and making the compilation of
         some files optional.
