2007-10-22  Mark Rowe  <mrowe@apple.com>
        Gtk build fix.

        * kjs/array_instance.cpp:


git-svn-id: http://svn.webkit.org/repository/webkit/trunk@26883 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/JavaScriptCore/ChangeLog
+++ b/JavaScriptCore/ChangeLog
@@ -1,3 +1,9 @@
+2007-10-22  Mark Rowe  <mrowe@apple.com>
+
+        Gtk build fix.
+
+        * kjs/array_instance.cpp:
+
 2007-10-22  Darin Adler  <darin@apple.com>
 
         Reviewed by Maciej.
