- Removed a leak that was fixed.
        * Scripts/run-webkit-tests:



git-svn-id: http://svn.webkit.org/repository/webkit/trunk@26891 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/WebKitTools/ChangeLog
+++ b/WebKitTools/ChangeLog
@@ -1,3 +1,9 @@
+2007-10-22  Kevin McCullough  <kmccullough@apple.com>
+
+        - Removed a leak that was fixed.
+
+        * Scripts/run-webkit-tests:
+
 2007-10-19  Kevin McCullough  <kmccullough@apple.com>
 
         Reviewed by Darin.
