Reviewed by Oliver.
        - Avoid moving floats into integer registers in jsNumber() for 3% speedup on SunSpider
        http://bugs.webkit.org/show_bug.cgi?id=15627

        * kjs/JSImmediate.h:
        (KJS::JSImmediate::fromDouble): Avoid moving floats to integer
        registers since this is very slow.



git-svn-id: http://svn.webkit.org/repository/webkit/trunk@26893 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/JavaScriptCore/ChangeLog
+++ b/JavaScriptCore/ChangeLog
@@ -1,3 +1,14 @@
+2007-10-22  Maciej Stachowiak  <mjs@apple.com>
+
+        Reviewed by Oliver.
+        
+        - Avoid moving floats into integer registers in jsNumber() for 3% speedup on SunSpider
+        http://bugs.webkit.org/show_bug.cgi?id=15627
+
+        * kjs/JSImmediate.h:
+        (KJS::JSImmediate::fromDouble): Avoid moving floats to integer
+        registers since this is very slow.
+
 2007-10-22  Darin Adler  <darin@apple.com>
 
         Reviewed by Eric Seidel.
