Windows build fix
        Reviewed by NOBODY.

        * Scripts/build-dumprendertree: Fix path to DumpRenderTree.sln.


git-svn-id: http://svn.webkit.org/repository/webkit/trunk@26903 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/WebKitTools/ChangeLog
+++ b/WebKitTools/ChangeLog
@@ -1,3 +1,11 @@
+2007-10-22  Adam Roben  <aroben@apple.com>
+
+        Windows build fix
+
+        Reviewed by NOBODY.
+
+        * Scripts/build-dumprendertree: Fix path to DumpRenderTree.sln.
+
 2007-10-22  Kevin McCullough  <kmccullough@apple.com>
 
         - Removed a leak that was fixed.
