- a first cut at fixing the Qt and GTK builds
        * WebCore.pro: Add new .idl and .cpp files.
        * DerivedSources.make: Re-sorted.



git-svn-id: http://svn.webkit.org/repository/webkit/trunk@26905 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/WebCore/ChangeLog
+++ b/WebCore/ChangeLog
@@ -1,3 +1,10 @@
+2007-10-22  Darin Adler  <darin@apple.com>
+
+        - a first cut at fixing the Qt and GTK builds
+
+        * WebCore.pro: Add new .idl and .cpp files.
+        * DerivedSources.make: Re-sorted.
+
 2007-10-22  Eric Seidel  <eric@webkit.org>
 
         Reviewed by hyatt.
