2007-10-22  Eric Seidel  <eric@webkit.org>
        Reviewed by Maciej.

        Fix build by properly exposing SVG font-face dom bindings.

        * DerivedSources.make:
        * WebCore.vcproj/WebCore.vcproj: add font-face files to build
        * WebCore.xcodeproj/project.pbxproj: add missing DOM bindings files
        * bindings/js/JSSVGElementWrapperFactory.cpp:
        * bindings/objc/DOM.mm:
        (WebCore::createElementClassMap):
        * bindings/objc/DOMSVG.h:
        * ksvg2/svg/SVGDefinitionSrcElement.idl: inherit from SVGElement


git-svn-id: http://svn.webkit.org/repository/webkit/trunk@26907 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/LayoutTests/ChangeLog
+++ b/LayoutTests/ChangeLog
@@ -1,5 +1,15 @@
 2007-10-22  Eric Seidel  <eric@webkit.org>
 
+        Reviewed by Maciej.
+        
+        Add tests to verify that font-face-* DOM bindings are exposed correctly.
+
+        * fast/js/resources/js-test-pre.js: add shouldBeNull and shouldBeEqualToString
+        * svg/dom/font-face-elements-expected.txt: Added.
+        * svg/dom/font-face-elements.html: Added.
+
+2007-10-22  Eric Seidel  <eric@webkit.org>
+
         Reviewed by hyatt.
         
         Implement <font-face> and friends
