2007-10-22  Eric Seidel  <eric@webkit.org>
        Build fix only, no review.

        * WebCore.xcodeproj/project.pbxproj: re-add all DOMSVG headers to copy-files phase to make sure.


git-svn-id: http://svn.webkit.org/repository/webkit/trunk@26911 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/WebCore/ChangeLog
+++ b/WebCore/ChangeLog
@@ -2,6 +2,12 @@
 
         Build fix only, no review.
 
+        * WebCore.xcodeproj/project.pbxproj: re-add all DOMSVG headers to copy-files phase to make sure.
+
+2007-10-22  Eric Seidel  <eric@webkit.org>
+
+        Build fix only, no review.
+
         * WebCore.xcodeproj/project.pbxproj: make sure DOMSVGAnimateElement.h is copied into headers.
 
 2007-10-22  Eric Seidel  <eric@webkit.org>
