--- a/WebCore/ChangeLog
+++ b/WebCore/ChangeLog
@@ -1,3 +1,13 @@
+2007-10-23  Eric Seidel  <eric@webkit.org>
+
+        Build fix only, no review.
+
+        Sacrifice three virgin hours upon the altar of the heathen XCode gods
+        and pray that our build troubles are finally over. :(
+
+        * DerivedSources.make: add DOMSVGException.h
+        * WebCore.xcodeproj/project.pbxproj: Remove DOMSVG*Interal.h files from "Copy Generated Headers" phase. Why?  Who knows.
+
 2007-10-22  Steve Falkenburg  <sfalken@apple.com>
 
         Fix build.
