--- a/LayoutTests/ChangeLog
+++ b/LayoutTests/ChangeLog
@@ -1,3 +1,14 @@
+2007-10-23  Darin Adler  <darin@apple.com>
+
+        Reviewed by Maciej.
+
+        - test for http://bugs.webkit.org/show_bug.cgi?id=15639
+          Math functions
+
+        * fast/js/math-expected.txt: Added.
+        * fast/js/math.html: Added.
+        * fast/js/resources/math.js: Added.
+
 2007-10-22  Eric Seidel  <eric@webkit.org>
 
         Reviewed by Maciej.
