--- a/LayoutTests/ChangeLog
+++ b/LayoutTests/ChangeLog
@@ -1,5 +1,12 @@
 2007-10-23  Darin Adler  <darin@apple.com>
 
+        - removed numeric results so the test is more platform-independent
+
+        * fast/js/math-expected.txt: Updated.
+        * fast/js/resources/math.js: Updated.
+
+2007-10-23  Darin Adler  <darin@apple.com>
+
         Reviewed by Maciej.
 
         - test for http://bugs.webkit.org/show_bug.cgi?id=15639
