--- a/LayoutTests/ChangeLog
+++ b/LayoutTests/ChangeLog
@@ -1,3 +1,11 @@
+2007-10-23  Adam Roben  <aroben@apple.com>
+
+        Add some SVG tests to the Windows Skipped file
+
+        Reviewed by Oliver.
+
+        * platform/win/Skipped:
+
 2007-10-23  Darin Adler  <darin@apple.com>
 
         - removed numeric results so the test is more platform-independent
