--- a/WebCore/ChangeLog
+++ b/WebCore/ChangeLog
@@ -1,3 +1,10 @@
+2007-10-23  Anders Carlsson  <andersca@apple.com>
+
+        Correct the version #if check.
+        
+        * platform/sql/SQLDatabase.cpp:
+        (WebCore::SQLDatabase::authorizerFunction):
+
 2007-10-23  Jon Honeycutt  <jhoneycutt@apple.com>
 
         Reviewed by Anders.
