--- a/LayoutTests/ChangeLog
+++ b/LayoutTests/ChangeLog
@@ -1,3 +1,14 @@
+2007-10-23  Justin Garcia  <justin.garcia@apple.com>
+
+        Reviewed by Oliver Hunt.
+        
+        <rdar://problem/5544856> 
+        REGRESSION: After typing 2-byte text, undo only undoes one keystroke at a time
+        
+        * platform/mac/editing/input/firstrectforcharacterrange-styled-expected.txt:
+        * platform/mac/editing/input/text-input-controller-expected.txt:
+        * platform/mac/editing/input/wrapped-line-char-rect-expected.txt:
+
 2007-10-23  Adele Peterson  <adele@apple.com>
 
         Reviewed by Darin.
