--- a/LayoutTests/ChangeLog
+++ b/LayoutTests/ChangeLog
@@ -1,5 +1,13 @@
 2007-10-23  Justin Garcia  <justin.garcia@apple.com>
 
+        Fixing an accidental change made in r25484.
+
+        * editing/pasteboard/quirks-mode-br-1.html:
+        * platform/mac/editing/pasteboard/quirks-mode-br-1-expected.checksum:
+        * platform/mac/editing/pasteboard/quirks-mode-br-1-expected.txt:
+
+2007-10-23  Justin Garcia  <justin.garcia@apple.com>
+
         Reviewed by Oliver Hunt.
         
         <rdar://problem/5544856> 
